test/Fail/Issue5044.err
Issue5044.agda:28.1-60: error: [MissingBindingsForTelescopeVariables]
Missing bindings for telescope variables: A x
All variables in the clause telescope must be bound in the left-hand side.
